CMake build: Improve default qmake for dumper tests
We can do better than just "qmake" and instead take the path to
the qmake that the test was compiled with.
(Can still be overridden with environment variables.)

Change-Id: Icc045d4f96946aeb1f324e6f1334dc9747215f3f

--- a/tests/auto/debugger/CMakeLists.txt
+++ b/tests/auto/debugger/CMakeLists.txt
@@ -9,10 +9,14 @@ add_qtc_test(tst_debugger_disassembler
 
 option(WITH_DEBUGGER_DUMPERS "Include tests for debugger pretty printers" ON)
 if (WITH_DEBUGGER_DUMPERS)
+  get_target_property(qmake_binary Qt5::qmake IMPORTED_LOCATION)
+
   add_qtc_test(tst_debugger_dumpers
     TIMEOUT 0
     DEPENDS Qt5::Network Utils
-    DEFINES DUMPERDIR="${PROJECT_SOURCE_DIR}/share/qtcreator/debugger"
+    DEFINES
+      DUMPERDIR="${PROJECT_SOURCE_DIR}/share/qtcreator/debugger"
+      DEFAULT_QMAKE_BINARY="${qmake_binary}"
     INCLUDES
       "${DEBUGGERDIR}"
     SOURCES
